--- a/src/app/styles/logo.module.css
+++ b/src/app/styles/logo.module.css
@@ -3,7 +3,7 @@
   height: auto;
   /* border: 1px solid black; */
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 899px) {
   .logoimg {
     min-width: 36vw;
     height: 36vh;
