--- a/src/app/styles/mobilesecnav.module.css
+++ b/src/app/styles/mobilesecnav.module.css
@@ -19,7 +19,7 @@
   display: flex;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 900px) {
   .mobilesecnav {
     display: none;
   }
